--- a/medial-queries1/main.css
+++ b/medial-queries1/main.css
@@ -1,3 +1,46 @@
-body {
-  background: blanchedalmond;
+* {
+  border: 1px teal solid;
 }
+
+.container {
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.a {
+  min-width: 99%;
+  min-height: 19vh;
+  margin: 1em;
+}
+
+.b {
+  min-width: 99%;
+  min-height: 59vh;
+  margin: 1em;
+}
+
+.c {
+  min-width: 99%;
+  min-height: 19vh;
+  margin: 1em;
+}
+
+@media(min-width:1000px) {
+  .container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+   .a {
+    min-width: 96%
+  }
+
+  .b {
+    min-width: 65%;
+  }
+
+  .c {
+    min-width: 28%;
+  }
+} 
