--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,3 +1,94 @@
 body {
   background: papayawhip;
 }
+
+* {
+  border: 1px limegreen solid;
+}
+/* Mobile Formatting*/
+.container {
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.a {
+  min-width: 99%;
+  min-height: 19vh;
+  margin: 1em;
+}
+
+.b {
+  min-width: 99%;
+  min-height: 39vh;
+  margin: 1em;
+}
+
+.c {
+  min-width:30%;
+  min-height: 19vh;
+  margin: 1em;
+}
+
+.d {
+  min-width:30%;
+  min-height: 19vh;
+  margin: 1em;
+}
+
+.e {
+  min-width:29%;
+  min-height: 19vh;
+  margin: 1em;
+}
+
+.f{
+  min-width: 99%;
+  min-height: 19vh;
+  margin: 1em;
+}
+
+/*Browswer Formatting*/
+@media(min-width:1000px) {
+  .container  {
+    flex-direction: row;
+    flex-wrap: wrap;
+
+   }
+
+  .a {
+    min-height: 31vh;
+    order: 1;
+}
+
+  .b {
+    min-height: 31vh;
+    min-width: 73%;
+    order: 2;
+  }
+
+  .c {
+    min-height: 24vh;
+    min-width: 20%;
+    order: 4;
+  }
+
+  .d {
+    min-height: 24vh;
+    min-width: 23%;
+    order: 5;
+  }
+
+  .e {
+    min-height: 24vh;
+    min-width: 20%;
+    order: 6;
+  }
+
+  .f {
+    min-height: 64vh;
+    min-width: 21%;
+    order: 3;
+    
+  }
+}
