--- a/medial-queries3/main.css
+++ b/medial-queries3/main.css
@@ -9,98 +9,57 @@ body {
 .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  max-height: 100vh;
+  justify-content: stretch;
+  min-height: 100vh;
 }
 
-.a {
-  min-width: 98%;
-  min-height: 19vh;
-  margin: 1em;
+header {
+  width: 100%;
+  height: 10em;
+  margin-bottom: 1em;
 }
 
-.b {
-  min-width: 28%;
-  min-height: 19vh;
-  margin: 1em;
+.wrapper {
+  width: 100%;
+  min-height: 85vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.c {
-  min-width: 28%;
-  min-height: 19vh;
-  margin: 1em;
+aside {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-grow: 1;
 }
 
-.d {
-  min-width: 28%;
-  min-height: 19vh;
-  margin: 1em;
+aside > div {
+  width: 22%;
+  background: gray;
+  margin: 2vw;
 }
 
-.e {
-  min-width: 28%;
-  min-height: 19vh;
-  margin: 1em;
+main {
+  flex-grow: 4;
 }
 
-.f {
-  min-width: 28%;
-  min-height: 19vh;
-  margin: 1em;
-}
-
-.g {
-  min-width: 28%;
-  min-height: 19vh;
-  margin: 1em;
-}
-
-.h {
-  min-width: 98%;
-  min-height: 38vh;
-  margin: 1em;
-}
 
 @media (min-width: 1000px) {
-
-  .a {
-    min-width: 98%;
-    min-height: 30vh;
-    
+  .wrapper {
+    flex-direction: row;
+  }
+  aside {
+    width: 80%;
+    flex: 4;
+    align-items: center;
+    margin-right: 1em;
+  }
+  aside > div {
+    height: 10em;
   }
 
-  .b {
-    min-width: 23%;
-    min-height: 30vh;
-  }
-
-  .c  {
-    min-width: 23%;
-    min-height: 30vh;
-  }
-
-  .d  {
-    min-width: 23%;
-    min-height: 30vh;
-  }
-
-  .e  {
-    min-width: 23%;
-    min-height: 30vh;
-  }
-
-  .f  {
-    min-width: 23%;
-    min-height: 30vh;
-  }
-
-  .g  {
-    min-width: 23%;
-    min-height: 30vh;
-  }
-
-  .h {
-    min-width: 23%;
-    min-height: 60vh;
+  main {
+    flex: 2;
   }
 }
