--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -26,7 +26,7 @@ body {
 header, footer, aside, .wrapper  {
   flex-grow: 1;
   margin: .5em;
-  max-height: 10vh;
+  min-height: 10vh;
 }
 
 aside  {
@@ -40,11 +40,10 @@ aside  {
 aside > div {
   flex-grow: 10;
   margin: .5em;
-  /* min-width: 20vh; */
 }
 
 main {
-  width: 90%;
+  min-width: 90%;
   flex-grow: 3;
   margin: .5em;
 }
@@ -56,8 +55,8 @@ main {
     flex-wrap: wrap;
   }
   header {
-    width: 100%;
-    max-height: 10vh;
+    min-width: 100%;
+    min-height: 10vh;
   }
   .wrapper {
     justify-content: stretch;
