--- a/medial-queries3/main.css
+++ b/medial-queries3/main.css
@@ -15,19 +15,19 @@ body {
 
 header {
   width: 100%;
-  height: 10em;
+  min-height: 20vh;
   margin-bottom: 1em;
 }
 
 .wrapper {
-  width: 100%;
+  min-width: 100%;
   min-height: 85vh;
   display: flex;
   flex-direction: column;
 }
 
 aside {
-  width: 100%;
+  min-width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -35,7 +35,7 @@ aside {
 }
 
 aside > div {
-  width: 22%;
+  min-width: 24%;
   background: gray;
   margin: 2vw;
 }
@@ -50,13 +50,13 @@ main {
     flex-direction: row;
   }
   aside {
-    width: 80%;
+    min-width: 80%;
     flex: 4;
     align-items: center;
     margin-right: 1em;
   }
   aside > div {
-    height: 10em;
+    min-height: 24vh;
   }
 
   main {
